Изменения + 23.01.2025